--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
     <link rel="icon" type="image/png" sizes="96x96" href="/assets/images/privatesky.png">
     <link rel="manifest" href="/manifest.json">
     <link href="/assets/css/main.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="/cardinal/core/assets/css/bootstrap/bootstrap.css">
 
-    <script type="module" src="/cardinal/core/build/cardinal.esm.js"></script>
-    <script nomodule src="/cardinal/core/build/cardinal.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="/cardinal/core/assets/css/bootstrap/bootstrap.css"> -->
 
-    <script type="module" src="/cardinal/forms/build/cardinal.esm.js"></script>
-    <script nomodule src="/cardinal/forms/build/cardinal.js"></script>
+    <script type="module" src="/cardinal/cardinal.js"></script>
 </head>
 <body>
     <psk-app-root></psk-app-root>
