--- a/pages/Howto/a-web-site-with-swarms.html
+++ b/pages/Howto/a-web-site-with-swarms.html
@@ -39,7 +39,7 @@
         <psk-list list-type="ordered">
             Navigate to the directory that holds the PSK Node source code and identify the <b>domain</b> folder
             Open the <b>domain</b> folder
-            Open the file <b>index.js</b> and add the following code:
+            Open the file <b>index.ts</b> and add the following code:
             <psk-code language="JavaScript">
                 $$.swarms.describe("Echo",{
                 say: function(input){
