--- a/pages/Tools/octopus.html
+++ b/pages/Tools/octopus.html
@@ -25,7 +25,7 @@
                 "name": "My Octopus Project",
                 "version": "1.0.0",
                 "description": "",
-                "main": "index.js",
+                "main": "index.ts",
                 "scripts": {
                     "octopus": "node ./node_modules/octopus/scripts/run"
                 },
