--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <!-- local assets -->
     <link rel="icon" type="image/png" sizes="96x96" href="/assets/images/privatesky.png">
     <link rel="manifest" href="/manifest.json">
-    <link href="/assets/css/main.css" rel="stylesheet" type="text/css">
-
-     <link rel="stylesheet" type="text/css" href="/cardinal/core/assets/css/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body>
     <wcc-app-root></wcc-app-root>
