--- a/pages/webcardinal/cheatsheet.html
+++ b/pages/webcardinal/cheatsheet.html
@@ -13,8 +13,8 @@
         <h1>WebCardinal Cheatsheet</h1>
         <label for="sort">Sort components:</label>
         <select id="sort" data-tag="sort">
-            <option value="alphabetically" selected>alphabetically</option>
-            <option value="library">by library</option>
+            <option value="library" selected>by library</option>
+            <option value="alphabetically">alphabetically</option>
         </select>
     </header>
     <main data-tag="cheatsheet">
