Replaced webc-page with webc-container. Added initial webcardinal form page. Moved webcardinal specific controllers to their correct folder.

--- a/pages/webcardinal/cheatsheet.html
+++ b/pages/webcardinal/cheatsheet.html
@@ -8,7 +8,7 @@
     }
 </style>
 <link rel="stylesheet" href="/assets/css/pages/cheatsheet.css">
-<webc-page controller="webcardinal/CheatsheetController">
+<webc-container controller="webcardinal/CheatsheetController">
     <header>
         <h1>WebCardinal Cheatsheet</h1>
         <label for="sort">Sort components:</label>
@@ -20,4 +20,4 @@
     <main data-tag="cheatsheet">
         <!-- Automatically generated -->
     </main>
-</webc-page>
+</webc-container>
